# digital-wallet-system

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
history-service/app/: config.py  database.py  dependencies.py  main.py
history-service/app/controllers/: __init__.py  history_controller.py
history-service/app/models/: __init__.py  transaction_event.py
history-service/app/repositories/: __init__.py  history_repository.py
history-service/app/schemas/: __init__.py  event_schema.py  history_response.py
history-service/app/services/: __init__.py  consumer_service.py  history_service.py
history-service/migrations/: env.py
history-service/migrations/versions/: 415f3a9f0b4b_initial_transaction_event_tables.py  437257846018_create_transaction_event_table.py  aa7258becc32_create_transaction_event_table.py  f099a09999ff_increade_character_length_for_.py  f363a5c5b403_migrate_history_table.py
shared/schemas/: __init__.py
tests/: conftest.py  constants.py  test_concurrent.py  test_integration.py  utils.py
wallet-service/: alembic.ini
wallet-service/alembic/: env.py
wallet-service/alembic/versions/: 2025_10_04_0801-405d14370a3a_initial_wallet_tables.py  2025_10_04_0817-aa212aa78fe6_initial_wallet_tables.py
wallet-service/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
wallet-service/app/controllers/: __init__.py  user_controller.py  wallet_controller.py
wallet-service/app/models/: __init__.py  wallet.py  (+1 more)
wallet-service/migrations/: env.py
(+12 files in other folders)
