[project]
name = "digital-wallet-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "alembic>=1.16.5",
    "fastapi[standard]>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
]
